# StoryFlow

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
src/: backend.cpp  backend.h  main.cpp
src/FileManager/: FileManager.cpp  FileManager.h
src/core/net/: apiservice.cpp  apiservice.h
src/core/player/: timelinerenderer.cpp  timelinerenderer.h
src/core/player/engine/: storyengine.cpp  storyengine.h
src/core/video/: videogenerator.cpp  videogenerator.h
src/core/viewmodel/: assetsviewmodel.cpp  assetsviewmodel.h  storyviewmodel.cpp  storyviewmodel.h
src/local_ai_model_services/: .env  Image_to_video_test.py  Text_to_Audio_test.py  Text_to_Image_test.py  api_image_to_video.py  api_llm.py  api_text_to_audio.py  api_text_to_image.py  gateway.py  llm_test.py  start_all.ps1
src/local_ai_model_services/json/: json_1764156132_ebf17cda.json
src/local_ai_model_services/logs/: itv.err  tta.err
src/ui/: Main.qml
src/ui/Components/: LeftPage.qml  RightPage.qml  TopPage.qml
src/ui/Components/LeftPage/: LeftPage.qml
src/ui/Components/RightPage/: RightPage.qml
src/ui/Components/TopPage/: TopPage.qml
src/ui/Pages/: AssetsPage.qml  CreatePage.qml  PreviewPage.qml  ShotDetailPage.qml  StoryboardPage.qml
src/videocreator/: VideoCreatorAPI.cpp  VideoCreatorAPI.h  main.cpp
src/videocreator/decoder/: AudioDecoder.cpp  AudioDecoder.h  ImageDecoder.cpp  ImageDecoder.h  VideoDecoder.cpp  VideoDecoder.h
src/videocreator/engine/: RenderEngine.cpp  RenderEngine.h
src/videocreator/ffmpeg_utils/: AvCodecContextWrapper.h  AvFormatContextWrapper.h  AvFrameWrapper.h  AvPacketWrapper.h  FFmpegHeaders.h
src/videocreator/filter/: EffectProcessor.cpp  EffectProcessor.h
src/videocreator/model/: ConfigLoader.cpp  ConfigLoader.h  ProjectConfig.h
